gcc-10 (10-20200307-1) UNRELEASED; urgency=medium

  * GCC snapshot, taken from the trunk (20200307, 2a4c59d9aa6).
  * For all runtime libraries, generate dependencies on libgcc-sN instead
    on libgccN.
  * Use llvm 10 for the amdgcn offload compiler, when available.
  * Update newlib to 3.3.0.
  * Stop shipping the include-fixed directory.

 -- Matthias Klose <doko@debian.org>  Sat, 07 Mar 2020 11:36:54 +0100

gcc-10 (10-20200304-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200304, 94f7d7ec6eb).
  * Update the autopkg tests to run GCC 10.

 -- Matthias Klose <doko@debian.org>  Wed, 04 Mar 2020 16:38:16 +0100

gcc-10 (10-20200222-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200222, e99b18cf710).
  * Don't create doc directories for -dbg packages when not building those.
  * Update libgphobos symbols file for amd64.
  * Don't try to strip the target libs for the amdgcn offload compiler.

 -- Matthias Klose <doko@debian.org>  Sat, 22 Feb 2020 13:39:51 +0100

gcc-10 (10-20200211-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200211, a6ee556c765).

  [ Matthias Klose ]
  * Let the libgcc-sN multilib cross packages provide libgccN.
  * libgcc-sN: Move library back to /lib from /usr/lib, and add
    a replaces to libgccN. Closes: #950624.
  * libgcc-sN: Add break on cryptsetup-initramfs. Closes: #950551.

  [ Aurelien Jarno ]
  * debian/libgcc-s.symbols: add mipsn32el to the list of architectures
    with GCC_3.3.4, GCC_4.4.0 and CC_4.5.0 symbols.
  * debian/rules.conf: libgcc-s1 and corresponding multilib packages are
    epochless. Adjust DEB_LIBGCC_VERSION accordingly.

 -- Matthias Klose <doko@debian.org>  Tue, 11 Feb 2020 07:20:23 +0100

gcc-10 (10-20200204-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200204, 0303907ea5d).
  * On architectures where libgcc_s.so is a symlink, replace the symlink with
    a simple linker script.