@@ -751,7 +751,11 @@ ifneq (,$(findstring build-cross, $(build_type)))
 endif
 
 ifeq ($(single_package),yes)
-  with_offload_nvptx := disabled for snapshot builds
+  ifeq ($(trunk_build),yes)
+    with_offload_nvptx := yes
+  else
+    with_offload_nvptx := disabled for snapshot builds
+  endif
 endif
 ifneq ($(findstring nonvptx, $(DEB_BUILD_OPTIONS)),)
   with_offload_nvptx := disabled by DEB_BUILD_OPTIONS
@@ -781,7 +785,11 @@ ifneq (,$(findstring build-cross, $(build_type)))
 endif
 
 ifeq ($(single_package),yes)
-  with_offload_gcn := disabled for snapshot builds
+  ifeq ($(trunk_build),yes)
+    with_offload_gcn := yes
+  else
+    with_offload_gcn := disabled for snapshot builds
+  endif
 endif
 ifneq ($(findstring nonvptx, $(DEB_BUILD_OPTIONS)),)
   with_offload_gcn := disabled by DEB_BUILD_OPTIONS
