@@ -64,7 +64,6 @@ debian_patches += \
 	libjit-ldflags \
 	libffi-pax \
 	libffi-race-condition \
-	gcc-foffload-default \
 	cuda-float128 \
 	libffi-mipsen-r6 \
 	t-libunwind-elf-Wl-z-defs \
@@ -187,6 +186,7 @@ debian_patches += \
 	sys-auxv-header \
 	gdc-dynamic-link-phobos \
 	ia64-disable-selective-scheduling \
+	gcc-foffload-default \
 
 ifeq ($(with_ibm_branch),yes)
   debian_patches += ibm-branch
@@ -264,7 +264,7 @@ debian_patches += go-testsuite
 #debian_patches += libasan-sparc
 
 # Has to be refreshed manually as described in the header.
-debian_patches += ada-changes-in-autogen-output
+#debian_patches += ada-changes-in-autogen-output
 
 series_stamp = $(stampdir)/02-series-stamp
 series: $(series_stamp)
