@@ -6,6 +6,7 @@ gcc-10 (10-20200307-1) UNRELEASED; urgency=medium
   * Use llvm 10 for the amdgcn offload compiler, when available.
   * Update newlib to 3.3.0.
   * Stop shipping the include-fixed directory.
+  * Build the snapshot package with the offload compilers included.
 
  -- Matthias Klose <doko@debian.org>  Sat, 07 Mar 2020 11:36:54 +0100
 
